# discord-bot-interface

./: .gitignore  .project  ContestInstructions.txt  Languages.txt  ProblemUpload.py  Procfile  README.md  brainf.py  chars.py  commands.txt  console.out  contests.py  errors.txt  getch.py  judging.py  main.fth  main.py  params.yaml  problem_setting.md  problems.txt  pyproject.toml  requirements.txt  sandboxing.py
Judge1/: SourceCode.js  cexec  cppexec  scrape
Judge2/: SourceCode  SourceCode.c  SourceCode.cpp  SourceCode.f  SourceCode.js  SourceCode.p  SourceCode.rb  SourceCode.rr  cexec  cppexec  rexec
Judge3/: cases.txt  cppexec  errors.txt
nodejs/: config.js  judge.js
